# calendar

./: .gitignore  gencal.py  notes.sh  pyproject.toml  requirements.in
